@@ -6,7 +6,7 @@ services:
 language: go
 
 go:
-  - 1.9.2
+  - 1.9.4
 
 os:
   - linux
