@@ -1,6 +1,6 @@
 :stack-version: 7.0.0-alpha1
 :doc-branch: master
-:go-version: 1.9.2
+:go-version: 1.9.4
 :release-state: unreleased
 :python: 2.7.9
 :docker: 1.12
